<resources>
    <string name="app_name">تمارين اليوغا</string>
    <string name="home_title">تمارين اليوغا</string>
    <string name="add_unit_id">ca-app-pub-1332480513983290~9318610374</string>
    <string name="AdMob_Baner_ID" translatable="false">ca-app-pub-1332480513983290/5026838113</string>
    <string name="InterstitialAds">"ca-app-pub-1332480513983290/9896021413"</string>
    <string name="facebook_app_id">734575647096758</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="_18_5">&lt; 18.5</string>
    <string name="_40">&gt; 40</string>
    <string name="Day"> يوم </string>
    <string name="Kg"> كلغ </string>
    <string name="Pendingexercise"> تمرين معلق </string>
    <string name="Rest">راحة</string>
    <string name="TrainingData"> بيانات التدريب </string>
    <string name="TrainingName"> اسم التدريب </string>
    <string name="UserExercises"> تمرين المستخدم </string>
    <string name="add"> إضافة تدريب </string>
    <string name="addexercise"> إضافة تمرين </string>
    <string name="addmytrainingnolist"> أضف تدريباتك. </string>
    <string name="calcel"> إلغاء </string>
    <string name="cameras"> الكاميرا </string>
    <string name="cancel"> هل أنت متأكد أنك تريد إلغاء التمرين؟ </string>
    <string name="canceli"> إلغاء </string>
    <string name="congotext"> تهانينا! </string>
    <string name="current"> تيار </string>
    <string name="date"> التاريخ </string>
    <string name="daycmplt"> اكتمل اليوم </string>
    <string name="days"> أيام </string>
    <string name="delete"> هل أنت متأكد أنك تريد إعادة تعيين التمرين؟ </string>
    <string name="deleteMsg"> هل أنت متأكد أنك تريد الحذف؟ </string>
    <string name="deleteText"> هل أنت متأكد أنك تريد حذف بيانات التمرين هذه؟ </string>
    <string name="deleteTitle"> حذف بيانات التمرين؟ </string>
    <string name="deletei"> حذف </string>
    <string name="deltraining"> هل أنت متأكد أنك تريد حذف تدريبك؟ </string>
    <string name="dialogPriviousDay"> يرجى إنهاء تاريخ التحدي السابق أولاً. </string>
    <string name="dialogtitle"> إضافة اسم التدريب </string>
    <string name="document"> مستند </string>
    <string name="duration"> المدة </string>
    <string name="eighteenmonth">1 \n عام \n 6 الشهور</string>
    <string name="eightmonth">8 \n الشهور</string>
    <string name="elevenmonth">11 \n الشهور</string>
    <string name="fifteenmonth">1 \n عام \n 3 الشهور</string>
    <string name="fivemonth">5 \n الشهور</string>
    <string name="fourteenmonth">1 \n عام \n 2 الشهور</string>
    <string name="fourthmonth">4 \n الشهور</string>
    <string name="ninemonth">9 \n الشهور</string>
    <string name="nineteenmonth">1 \n عام \n 7 الشهور</string>
    <string name="onemonth">1 \n الشهور</string>
    <string name="sevenmonth">7 \n الشهور</string>
    <string name="seventeenmonth">1 \n عام \n 5 الشهور</string>
    <string name="sixmonth">6 \n الشهور</string>
    <string name="sixteenmonth">1 \n عام \n 4 الشهور</string>
    <string name="tenmonth">10 \n الشهور</string>
    <string name="twelvemonth">1 \n عام</string>
    <string name="twentyfourmonth">2 \n عام</string>
    <string name="twentymonth">1 \n عام \n 8 الشهور</string>
    <string name="twentyonemonth">1 \n عام \n 9 الشهور</string>
    <string name="twentythreemonth">1 \n عام \n 11 الشهور</string>
    <string name="twentytwomonth">1 \n عام \n 10 الشهور</string>
    <string name="twomonth">2 \n الشهور</string>
    <string name="thirteenmonth">1 \n عام \n 1 الشهور</string>
    <string name="threemonth">3 \n الشهور</string>
    <string name="next_excercise">التمرين التالي</string>
    <string name="pause">وقفة</string>
    <string name="next">التالى</string>
    <string name="my_training">تدريبي</string>
    <string name="notification">تنبيه</string>
    <string name="reminder">تذكير</string>
    <string name="restday">يوم راحة</string>
    <string name="finish">إنهاء</string>
    <string name="exercise_information">معلومات التمرين</string>
    <string name="no_of_times">عدد الاوقات</string>
    <string name="save_trining">حفظ التدريب</string>
    <string name="bmi_table">جدول مؤشر كتلة الجسم</string>
    <string name="under_weight">تحت الوزن</string>
    <string name="normal">عادي</string>
    <string name="over_weight">زيادة الوزن</string>
    <string name="obese">سمين</string>
    <string name="morbidly_obese">البدانة المفرطة</string>
    <string name="lbs">رطل</string>
    <string name="cm">سم</string>
    <string name="in">في</string>
    <string name="no">لا</string>
    <string name="ideal_weight">الوزن المثالي</string>
    <string name="healthy_weight">وزن صحي</string>
    <string name="height">ارتفاع</string>
    <string name="play">لعب</string>
    <string name="preparation">تجهيز</string>
    <string name="rest">راحة</string>
    <string name="times">مرات</string>
    <string name="three">ثلاثة</string>
    <string name="two">اثنان</string>
    <string name="one">واحد</string>
    <string name="lets_start">لنبدأ</string>
    <string name="edit_exercise">تحرير التمارين</string>
    <string name="no_of_seconds">عدد الثواني</string>
    <string name="minutes">الدقائق</string>
    <string name="share_your_result">شارك نتائجك</string>
    <string name="thnks_to_yoga_wkt">بفضل خطة تجريب اليوجا</string>
    <string name="no_app_avilable">لا يوجد تطبيق متاح</string>
    <string name="share_screenshot">مشاركة لقطة الشاشة</string>
    <string name="tap_to_record_value">انقر لتسجيل القيم</string>
    <string name="enter_valid_value">أدخل رقمًا صالحًا</string>
    <string name="enter_value">أدخل القيمة</string>
</resources>