<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/nolistlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <ImageView
            android:id="@+id/nolistimg"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/nolist" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nolistimg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/regular"
            android:text="@string/addmytrainingnolist"
            android:textColor="@color/white"
            android:textSize="14dp" />
    </RelativeLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/a1_grad"
        android:theme="@style/toolbartheme"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp">

        <TextView
            android:id="@+id/toolbarText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_training"
            android:fontFamily="@font/bold"
            android:textSize="18dp"
            android:layout_marginEnd="55dp"
            android:textColor="@color/white"/>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_margin="10dp"
        android:layout_alignParentEnd="true"
        android:background="@mipmap/left_side"
        android:layout_width="35dp"
        android:layout_height="35dp">
    </ImageView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mytraining"
        android:layout_above="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar" />

    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/a2_grad"
        android:fontFamily="@font/bold"
        android:layout_margin="15dp"
        android:text="@string/add"
        android:layout_above="@+id/adView"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:gravity="center"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        android:background="@color/bg_color"
        app:adUnitId="@string/AdMob_Baner_ID"
        />
</RelativeLayout>
