<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/a1_grad"
        android:theme="@style/toolbartheme"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp">

        <TextView
            android:id="@+id/toolbarText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restday"
            android:layout_marginEnd="55dp"
            android:fontFamily="@font/bold"
            android:textSize="18dp"
            android:textColor="@color/white"/>
    </androidx.appcompat.widget.Toolbar>


    <ImageView
        android:id="@+id/back_arrow"
        android:layout_margin="10dp"
        android:layout_alignParentEnd="true"
        android:background="@mipmap/left_side"
        android:layout_width="35dp"
        android:layout_height="35dp">
    </ImageView>


    <ImageView
        android:layout_width="match_parent"
        android:padding="40dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/finishRest"
        android:layout_below="@+id/subtext"
        android:layout_centerVertical="true"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="22dp"
        android:src="@mipmap/rest_day" />

    <TextView
        android:id="@+id/restheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/semibold"
        android:text="@string/Rest"
        android:textColor="@color/white"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/restheading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/semibold"
        android:text="@string/resttext"
        android:textColor="@color/TextColor"
        android:textSize="16dp" />

    <Button
        android:id="@+id/finishRest"
        android:layout_width="150dp"
        android:layout_marginBottom="10dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_above="@+id/adView"
        android:layout_centerHorizontal="true"
        android:background="@drawable/a2_grad"
        android:fontFamily="@font/bold"
        android:text="@string/finish"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:gravity="center"/>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        android:background="@color/bg_color"
        app:adUnitId="@string/AdMob_Baner_ID"
        />

</RelativeLayout>
