<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/a1_grad"
                android:gravity="center">

                <TextView
                    android:id="@+id/toptext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deleteTitle"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp" />
            </LinearLayout>

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/deleteText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/cancel"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:background="@drawable/button_bg_unselect"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/canceli"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/save"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:background="@drawable/a2_grad"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/savetext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/deletei"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
