<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="3">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="5dp"
        app:cardMaxElevation="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtbmiheading"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/a1_grad"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:text="@string/bmi_table"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtbmiheading"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/a2_grad"
                    android:backgroundTint="@color/color_range_pink"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:ellipsize="end"
                        android:fontFamily="@font/regular"
                        android:gravity="right"
                        android:paddingEnd="12dp"
                        android:paddingRight="12dp"
                        android:singleLine="true"
                        android:text="@string/_18_5"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:fontFamily="@font/regular"
                        android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:singleLine="true"
                        android:text="@string/under_weight"
                        android:textColor="@color/white"
                        android:textSize="16sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/a2_grad"
                    android:backgroundTint="@color/color_range_orange"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:ellipsize="end"
                        android:fontFamily="@font/regular"
                        android:gravity="right"
                        android:paddingEnd="12dp"
                        android:paddingRight="12dp"
                        android:singleLine="true"
                        android:text="18.5 - 24.9"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:fontFamily="@font/regular"
                        android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:singleLine="true"
                        android:text="@string/normal"
                        android:textColor="@color/white"
                        android:textSize="16sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/a2_grad"
                    android:backgroundTint="@color/color_range_yellow"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:ellipsize="end"
                        android:fontFamily="@font/regular"
                        android:gravity="right"
                        android:paddingEnd="12dp"
                        android:paddingRight="12dp"
                        android:singleLine="true"
                        android:text="25 - 29.9"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:fontFamily="@font/regular"
                        android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:singleLine="true"
                        android:text="@string/over_weight"
                        android:textColor="@color/black"
                        android:textSize="16sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/a2_grad"
                    android:backgroundTint="@color/color_range_green"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:ellipsize="end"
                        android:fontFamily="@font/regular"
                        android:gravity="right"
                        android:paddingEnd="12dp"
                        android:paddingRight="12dp"
                        android:singleLine="true"
                        android:text="30 - 39.9"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:fontFamily="@font/regular"
                        android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:singleLine="true"
                        android:text="@string/obese"
                        android:textColor="@color/white"
                        android:textSize="16sp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lineaobese_bmi_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/a2_grad"
                    android:backgroundTint="@color/color_range_blue"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:ellipsize="end"
                        android:fontFamily="@font/regular"
                        android:gravity="right"
                        android:paddingEnd="12dp"
                        android:paddingRight="12dp"
                        android:singleLine="true"
                        android:text="@string/_40"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:fontFamily="@font/regular"
                        android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:singleLine="true"
                        android:text="@string/morbidly_obese"
                        android:textColor="@color/white"
                        android:textSize="16sp" />


                </LinearLayout>

                <Button
                    android:id="@+id/buttonokbmi_table"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_below="@+id/lineaobese_bmi_weight"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/a2_grad"
                    android:fontFamily="@font/bold"
                    android:text="@string/ok"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15dp" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
